--- a/index.html
+++ b/index.html
@@ -4,49 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CTF Hub - Cybersecurity Tutorials</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #1e1e1e;
-            color: #dcdcdc;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            padding: 20px;
-            text-align: center;
-        }
-        header h1 {
-            margin: 0;
-        }
-        nav {
-            margin: 20px auto;
-            text-align: center;
-        }
-        nav a {
-            margin: 0 15px;
-            color: #dcdcdc;
-            text-decoration: none;
-            font-size: 18px;
-        }
-        nav a:hover {
-            color: #1e90ff;
-        }
-        main {
-            padding: 40px;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: #dcdcdc;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
