--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container mx-auto">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="#" class="text-2xl font-bold text-blue-400">Zuka<span class="text-white">Cyber</span></a>
+          <a href="#" class="text-2xl font-bold text-orange-400">Portfolio</a>
           <p class="text-gray-400 mt-2">© 2023 All rights reserved</p>
         </div>
         <div class="flex space-x-6">
