--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
             <li>Binary exploitation</li>
           </ul>
           <div class="flex space-x-4">
-            <a href="ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
+            <a href="categories/ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
               View All Challenges <i class="fas fa-arrow-right ml-2"></i>
             </a>
             <a href="categories/cryptography.html" class="inline-flex items-center bg-gray-700 hover:bg-gray-600 text-white px-4 py-2 rounded transition">
