--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     }
   </style>
 </head>
-<body class="bg-gray-950 text-gray-100">
+<body class="!bg-[#0a0a0a] text-gray-100" style="background-color: #0a0a0a !important;">
   <!-- Navbar -->
-  <nav class="navbar p-4 fixed w-full z-50 backdrop-blur-md bg-gray-950/80 border-b border-gray-800">
+  <nav class="navbar p-4 fixed w-full z-50 backdrop-blur-md bg-[#0a0a0a] border-b border-gray-800">
     <div class="container mx-auto flex justify-between items-center">
       <a href="#" class="text-2xl font-bold text-orange-400">Portfolio</a>
       <ul class="hidden md:flex space-x-6">
@@ -47,7 +47,7 @@
   </section>
 
   <!-- About Section -->
-  <section id="about" class="py-28 px-4 bg-gray-900/50">
+  <section id="about" class="py-28 px-4 bg-black">
     <div class="container mx-auto max-w-5xl">
       <h2 class="text-4xl md:text-5xl font-bold mb-16 text-center">About Me</h2>
       
@@ -77,11 +77,11 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 py-12 px-4">
+  <footer class="bg-black py-12 px-4">
     <div class="container mx-auto">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="#" class="text-2xl font-bold text-orange-400">Portfolio</a>
+          <a href="#" class="text-2xl font-bold text-blue-400">Zuka<span class="text-white">Cyber</span></a>
           <p class="text-gray-400 mt-2">© 2023 All rights reserved</p>
         </div>
         <div class="flex space-x-6">
