--- a/projects.html
+++ b/projects.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects | Zuka Cyber</title>
+  <title>Projects</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<body class="bg-gray-950 text-gray-100">
+<body class="!bg-black text-gray-100">
   <!-- Navbar -->
-  <nav class="navbar p-4 fixed w-full z-50 backdrop-blur-md bg-gray-950/80 border-b border-gray-800">
+  <nav class="navbar p-4 fixed w-full z-50 backdrop-blur-md bg-black border-b border-gray-800">
     <div class="container mx-auto flex justify-between items-center">
       <a href="index.html" class="text-2xl font-bold text-orange-400">Portfolio</a>
       <ul class="hidden md:flex space-x-6">
@@ -36,15 +36,15 @@
   </section>
 
   <!-- Projects Section -->
-  <section class="py-16 px-4">
+  <section class="py-16 px-4 bg-black">
     <div class="container mx-auto max-w-4xl">
-      <div class="bg-gray-900/50 rounded-lg overflow-hidden shadow-lg backdrop-blur-sm border border-gray-800">
+      <div class="bg-black rounded-lg overflow-hidden shadow-lg backdrop-blur-sm border border-gray-800">
         <div class="h-48 overflow-hidden">
           <img src="https://images.pexels.com/photos/60504/security-protection-anti-virus-software-60504.jpeg" 
                alt="CTF Challenges" 
                class="w-full h-full object-cover">
         </div>
-        <div class="p-6">
+        <div class="p-6 bg-gray-700">
           <h2 class="text-2xl font-bold mb-4">CTF Challenge Solutions</h2>
           <div class="mb-4">
             <span class="inline-block bg-blue-600 text-white text-xs px-2 py-1 rounded mr-2">Cryptography</span>
@@ -61,7 +61,7 @@
             <li>Binary exploitation</li>
           </ul>
           <div class="flex space-x-4">
-            <a href="categories/ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
+            <a href="ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
               View All Challenges <i class="fas fa-arrow-right ml-2"></i>
             </a>
             <a href="categories/cryptography.html" class="inline-flex items-center bg-gray-700 hover:bg-gray-600 text-white px-4 py-2 rounded transition">
@@ -74,17 +74,17 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 py-12 px-4">
+  <footer class="bg-black py-12 px-4">
     <div class="container mx-auto">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="index.html" class="text-2xl font-bold text-blue-400">Zuka<span class="text-white">Cyber</span></a>
-          <p class="text-gray-400 mt-2">© 2023 All rights reserved</p>
+          <a href="index.html" class="text-2xl font-bold text-orange-400">Portfolio</a>
+          <p class="text-gray-400 mt-2">© 2025 All rights reserved</p>
         </div>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-github text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-github text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
         </div>
       </div>
     </div>
