--- a/contact.html
+++ b/contact.html
@@ -3,22 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CyberSec Portfolio | Contact Me</title>
+  <title>Contact Me</title>
   <meta name="description" content="Get in touch for cybersecurity consulting and services">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="bg-gray-900 text-white">
+<body class="!bg-black text-white">
   <!-- Navbar -->
-  <nav class="navbar p-4 fixed w-full z-50">
+  <nav class="navbar p-4 fixed w-full z-50 bg-black">
     <div class="container mx-auto flex justify-between items-center">
-      <a href="/" class="text-2xl font-bold text-blue-400">CyberSec<span class="text-white">Portfolio</span></a>
+      <a href="index.html" class="text-2xl font-bold text-orange-400">Portfolio</a>
       <ul class="hidden md:flex space-x-6">
-        <li><a href="/" class="hover:text-blue-400 transition">Home</a></li>
-        <li><a href="about.html" class="hover:text-blue-400 transition">About</a></li>
-        <li><a href="projects.html" class="hover:text-blue-400 transition">Projects</a></li>
-        <li><a href="contact.html" class="text-blue-400">Contact</a></li>
+        <li><a href="index.html" class="hover:text-orange-400 transition">Home</a></li>
+        <li><a href="index.html#about" class="hover:text-orange-400 transition">About</a></li>
+        <li><a href="projects.html" class="hover:text-orange-400 transition">Projects</a></li>
+        <li><a href="contact.html" class="text-orange-400">Contact</a></li>
       </ul>
       <button class="md:hidden text-2xl" id="menu-toggle">
         <i class="fas fa-bars"></i>
@@ -37,24 +37,24 @@
   </section>
 
   <!-- Contact Form -->
-  <section class="py-16 bg-gray-800">
+  <section class="py-16 bg-black">
     <div class="container mx-auto px-4">
       <div class="max-w-2xl mx-auto">
         <form id="contactForm" class="space-y-6">
           <div>
             <label for="name" class="block text-gray-300 mb-2">Full Name</label>
             <input type="text" id="name" name="name" required
-                   class="w-full p-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-blue-500 focus:outline-none">
+                   class="w-full p-3 rounded-lg bg-gray-800 border border-gray-600 focus:border-orange-500 focus:outline-none">
           </div>
           <div>
             <label for="email" class="block text-gray-300 mb-2">Email Address</label>
             <input type="email" id="email" name="email" required
-                   class="w-full p-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-blue-500 focus:outline-none">
+                   class="w-full p-3 rounded-lg bg-gray-800 border border-gray-600 focus:border-orange-500 focus:outline-none">
           </div>
           <div>
             <label for="subject" class="block text-gray-300 mb-2">Subject</label>
             <select id="subject" name="subject" 
-                    class="w-full p-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-blue-500 focus:outline-none">
+                    class="w-full p-3 rounded-lg bg-gray-800 border border-gray-600 focus:border-orange-500 focus:outline-none">
               <option value="">Select a subject</option>
               <option value="consulting">Security Consulting</option>
               <option value="pentest">Penetration Testing</option>
@@ -65,17 +65,17 @@
           <div>
             <label for="message" class="block text-gray-300 mb-2">Message</label>
             <textarea id="message" name="message" rows="5" required
-                      class="w-full p-3 rounded-lg bg-gray-700 border border-gray-600 focus:border-blue-500 focus:outline-none"></textarea>
+                      class="w-full p-3 rounded-lg bg-gray-800 border border-gray-600 focus:border-orange-500 focus:outline-none"></textarea>
           </div>
           <div class="flex items-center">
             <input type="checkbox" id="consent" name="consent" required
-                   class="mr-2 rounded bg-gray-700 border-gray-600 focus:ring-blue-500">
+                   class="mr-2 rounded bg-gray-800 border-gray-600 focus:ring-orange-500">
             <label for="consent" class="text-gray-300 text-sm">
               I consent to having my data stored and processed according to your privacy policy
             </label>
           </div>
-          <button type="submit" 
-                  class="w-full py-3 px-6 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition flex items-center justify-center">
+            <button type="submit" 
+                  class="w-full py-3 px-6 bg-orange-600 text-white rounded-lg hover:bg-orange-700 transition flex items-center justify-center">
             <i class="fas fa-paper-plane mr-2"></i> Send Message
           </button>
         </form>
@@ -88,33 +88,33 @@
     <div class="container mx-auto px-4">
       <h2 class="text-3xl font-bold mb-12 text-center">Other Ways to Connect</h2>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <div class="contact-method p-6 bg-gray-800 rounded-lg text-center">
-          <div class="w-16 h-16 bg-blue-600 rounded-full flex items-center justify-center mx-auto mb-4">
+        <div class="contact-method p-6 bg-gray-700 rounded-lg text-center">
+          <div class="w-16 h-16 bg-orange-600 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="fas fa-envelope text-2xl"></i>
           </div>
           <h3 class="text-xl font-bold mb-2">Email Me</h3>
           <p class="text-gray-400 mb-4">contact@cybersecportfolio.com</p>
-          <a href="mailto:contact@cybersecportfolio.com" class="text-blue-400 hover:text-blue-300">
+          <a href="mailto:contact@cybersecportfolio.com" class="text-orange-400 hover:text-orange-300">
             Send Email <i class="fas fa-arrow-right ml-1"></i>
           </a>
         </div>
-        <div class="contact-method p-6 bg-gray-800 rounded-lg text-center">
-          <div class="w-16 h-16 bg-blue-600 rounded-full flex items-center justify-center mx-auto mb-4">
+        <div class="contact-method p-6 bg-gray-700 rounded-lg text-center">
+          <div class="w-16 h-16 bg-orange-600 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="fab fa-linkedin-in text-2xl"></i>
           </div>
           <h3 class="text-xl font-bold mb-2">LinkedIn</h3>
           <p class="text-gray-400 mb-4">Connect professionally</p>
-          <a href="https://linkedin.com" target="_blank" class="text-blue-400 hover:text-blue-300">
+          <a href="https://linkedin.com" target="_blank" class="text-orange-400 hover:text-orange-300">
             View Profile <i class="fas fa-arrow-right ml-1"></i>
           </a>
         </div>
-        <div class="contact-method p-6 bg-gray-800 rounded-lg text-center">
-          <div class="w-16 h-16 bg-blue-600 rounded-full flex items-center justify-center mx-auto mb-4">
+        <div class="contact-method p-6 bg-gray-700 rounded-lg text-center">
+          <div class="w-16 h-16 bg-orange-600 rounded-full flex items-center justify-center mx-auto mb-4">
             <i class="fab fa-github text-2xl"></i>
           </div>
           <h3 class="text-xl font-bold mb-2">GitHub</h3>
           <p class="text-gray-400 mb-4">View my security tools</p>
-          <a href="https://github.com" target="_blank" class="text-blue-400 hover:text-blue-300">
+          <a href="https://github.com" target="_blank" class="text-orange-400 hover:text-orange-300">
             Visit GitHub <i class="fas fa-arrow-right ml-1"></i>
           </a>
         </div>
@@ -123,17 +123,17 @@
   </section>
 
   <!-- Footer -->
-  <footer class="bg-gray-900 py-12">
+  <footer class="bg-black py-12">
     <div class="container mx-auto px-4">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="/" class="text-2xl font-bold text-blue-400">CyberSec<span class="text-white">Portfolio</span></a>
-          <p class="text-gray-400 mt-2">© 2023 All rights reserved</p>
+          <a href="index.html" class="text-2xl font-bold text-white">Portfolio</a>
+          <p class="text-gray-400 mt-2">© 2025 All rights reserved</p>
         </div>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-github text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-github text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
         </div>
       </div>
     </div>
