--- a/projects.html
+++ b/projects.html
@@ -45,14 +45,14 @@
                class="w-full h-full object-cover">
         </div>
         <div class="p-6 bg-gray-700">
-          <h2 class="text-2xl font-bold mb-4">CTF Challenge Solutions</h2>
+          <h2 class="text-2xl font-bold mb-4">How to do CTF Challanges</h2>
           <div class="mb-4">
             <span class="inline-block bg-blue-600 text-white text-xs px-2 py-1 rounded mr-2">Cryptography</span>
             <span class="inline-block bg-green-600 text-white text-xs px-2 py-1 rounded mr-2">Steganography</span>
             <span class="inline-block bg-purple-600 text-white text-xs px-2 py-1 rounded">Networking</span>
           </div>
           <p class="text-gray-300 mb-4">
-            Comprehensive collection of my CTF challenge solutions demonstrating skills in:
+            Collections of articles for helping to do CTF challanges.
           </p>
           <ul class="text-gray-300 mb-4 list-disc list-inside">
             <li>Cryptographic algorithm analysis</li>
@@ -61,11 +61,8 @@
             <li>Binary exploitation</li>
           </ul>
           <div class="flex space-x-4">
-            <a href="ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
-              View All Challenges <i class="fas fa-arrow-right ml-2"></i>
-            </a>
-            <a href="categories/cryptography.html" class="inline-flex items-center bg-gray-700 hover:bg-gray-600 text-white px-4 py-2 rounded transition">
-              Crypto Solutions
+            <a href="./cataegories/ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
+              View the project <i class="fas fa-arrow-right ml-2"></i
             </a>
           </div>
         </div>
