--- a/projects.html
+++ b/projects.html
@@ -61,7 +61,7 @@
             <li>Binary exploitation</li>
           </ul>
           <div class="flex space-x-4">
-            <a href="./cataegories/ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
+            <a href="./categories/ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
               View the project <i class="fas fa-arrow-right ml-2"></i
             </a>
           </div>
