--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
             <li>Network traffic analysis</li>
             <li>Binary exploitation</li>
           </ul>
-          <div class="flex space-x-4">
+          <div class="flex space">
             <a href="./categories/ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
               View the project <i class="fas fa-arrow-right ml-2"></i
             </a>
