--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects</title>
+  <title>Projects | Zuka Cyber</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -45,14 +45,14 @@
                class="w-full h-full object-cover">
         </div>
         <div class="p-6 bg-gray-700">
-          <h2 class="text-2xl font-bold mb-4">How to do CTF Challanges</h2>
+          <h2 class="text-2xl font-bold mb-4">CTF Challenge Solutions</h2>
           <div class="mb-4">
             <span class="inline-block bg-blue-600 text-white text-xs px-2 py-1 rounded mr-2">Cryptography</span>
             <span class="inline-block bg-green-600 text-white text-xs px-2 py-1 rounded mr-2">Steganography</span>
             <span class="inline-block bg-purple-600 text-white text-xs px-2 py-1 rounded">Networking</span>
           </div>
           <p class="text-gray-300 mb-4">
-            Collections of articles for helping to do CTF challanges.
+            Comprehensive collection of my CTF challenge solutions demonstrating skills in:
           </p>
           <ul class="text-gray-300 mb-4 list-disc list-inside">
             <li>Cryptographic algorithm analysis</li>
@@ -60,9 +60,9 @@
             <li>Network traffic analysis</li>
             <li>Binary exploitation</li>
           </ul>
-          <div class="flex space">
-            <a href="./categories/ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
-              View the project <i class="fas fa-arrow-right ml-2"></i
+          <div class="mt-6">
+            <a href="ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
+              View All Challenges <i class="fas fa-arrow-right ml-2"></i>
             </a>
           </div>
         </div>
@@ -75,13 +75,13 @@
     <div class="container mx-auto">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="index.html" class="text-2xl font-bold text-orange-400">Portfolio</a>
-          <p class="text-gray-400 mt-2">© 2025 All rights reserved</p>
+          <a href="index.html" class="text-2xl font-bold text-blue-400">Zuka<span class="text-white">Cyber</span></a>
+          <p class="text-gray-400 mt-2">© 2023 All rights reserved</p>
         </div>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-github text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-github text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
         </div>
       </div>
     </div>
