--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Zuka | CyberSec Portfolio</title>
+  <title>Portfolio</title>
   <meta name="description" content="Cybersecurity enthusiast and CTF player">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -35,12 +35,12 @@
            style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.pexels.com/photos/60504/security-protection-anti-virus-software-60504.jpeg')">
     <div class="container mx-auto">
       <div class="max-w-2xl">
-        <h1 class="text-4xl md:text-6xl font-bold mb-6">Hey, I'm <span class="text-blue-400">Zuka</span></h1>
+        <h1 class="text-4xl md:text-6xl font-bold mb-6">სალამი, მე ვარ <span class="text-blue-400">ზუკა</span></h1>
         <p class="text-xl md:text-2xl text-gray-300 mb-8">
-          A cybersecurity enthusiast passionate about CTF challenges and ethical hacking
+          კიბერუსაფრთხოების ენთუზიასტი
         </p>
             <a href="#about" class="inline-block bg-orange-600 hover:bg-orange-700 text-white px-6 py-3 rounded-lg transition">
-          Learn More About Me <i class="fas fa-arrow-down ml-2"></i>
+          ჩემს შესახებ <i class="fas fa-arrow-down ml-2"></i>
         </a>
       </div>
     </div>
@@ -58,18 +58,18 @@
                class="rounded-lg shadow-2xl w-full h-auto transform hover:scale-105 transition duration-500">
         </div>
         <div>
-          <h3 class="text-3xl font-bold mb-6 text-orange-400">My Cybersecurity Journey</h3>
+          <h3 class="text-3xl font-bold mb-6 text-orange-400">ჩემი ამბავი</h3>
           <p class="text-lg text-gray-300 mb-6 leading-relaxed">
-            My passion for cybersecurity began when I discovered my first CTF competition. The thrill of solving complex challenges and uncovering hidden vulnerabilities instantly captivated me, sparking a journey that has grown into a professional pursuit.
+           ჩემი გატაცება კიბერუსაფრთხოებით დაიწყო მაშინ, როდესაც ბავშვობის ასაკში ვუყურე პირველ "ჰაკერულ" ფილმებს, თუმცა, როდესაც ვნახე რეალური ჰაკინგი სინამდვილეში რა იყო, უფრო დავინტერესდი კომპიუტერულ უსაფრთხოებაში.
           </p>
           <p class="text-lg text-gray-300 leading-relaxed">
-            I specialize in network security analysis, cryptographic systems, and reverse engineering. Through continuous hands-on practice and research, I've developed a comprehensive skillset that allows me to:
+            ვცდილობ არ ჩამოვრჩე თანამედროვე ტრენდებს და ყოველთვის განვვითარდე. ყოველდღიური პრაქტიკებისა და კვლევების მეშვეობით ჩამოვიყალიბე მრავალი ყოვლისმომცველი უნარი, მაგალითად:
           </p>
           <ul class="text-lg text-gray-300 mt-4 mb-8 space-y-2 list-disc list-inside leading-relaxed">
-            <li>Analyze and secure complex network infrastructures</li>
-            <li>Implement and break cryptographic systems</li>
-            <li>Reverse engineer binaries and malware</li>
-            <li>Develop creative solutions for security challenges</li>
+            <li>ქსელური უსაფრთხოება</li>
+            <li>კრიპტოგრაფიული სისტემები </li>
+            <li>შეღწევადობის ტესტირება </li>
+            <li>ოპერაციული სისტემების უსაფრთხოება</li>
           </ul>
         </div>
       </div>
@@ -81,8 +81,8 @@
     <div class="container mx-auto">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="#" class="text-2xl font-bold text-blue-400">Zuka<span class="text-white">Cyber</span></a>
-          <p class="text-gray-400 mt-2">© 2023 All rights reserved</p>
+          <a href="#" class="text-2xl font-bold text-orange-400">Portfolio</a>
+          <p class="text-gray-400 mt-2">© 2025 ყველა უფლება დაცულია</p>
         </div>
         <div class="flex space-x-6">
           <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-github text-2xl"></i></a>
