--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
            style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.pexels.com/photos/60504/security-protection-anti-virus-software-60504.jpeg')">
     <div class="container mx-auto">
       <div class="max-w-2xl">
-        <h1 class="text-4xl md:text-6xl font-bold mb-6">სალამი, მე ვარ <span class="text-blue-400">ზუკა</span></h1>
+        <h1 class="text-4xl md:text-6xl font-bold mb-6"><span class="text-blue-400">ზაურ ჭიკაიძე</span></h1>
         <p class="text-xl md:text-2xl text-gray-300 mb-8">
           კიბერუსაფრთხოების ენთუზიასტი
         </p>
@@ -49,16 +49,16 @@
   <!-- About Section -->
   <section id="about" class="py-28 px-4 bg-black">
     <div class="container mx-auto max-w-5xl">
-      <h2 class="text-4xl md:text-5xl font-bold mb-16 text-center">About Me</h2>
+      <h2 class="text-4xl md:text-5xl font-bold mb-16 text-center">ჩემს შესახებ</h2>
       
       <div class="grid md:grid-cols-2 gap-12 items-center">
         <div class="order-1 md:order-none">
-          <img src="https://images.pexels.com/photos/3777946/pexels-photo-3777946.jpeg" 
+          <img src="./img/about_me.jpg" 
                alt="Zuka" 
                class="rounded-lg shadow-2xl w-full h-auto transform hover:scale-105 transition duration-500">
         </div>
         <div>
-          <h3 class="text-3xl font-bold mb-6 text-orange-400">ჩემი ამბავი</h3>
+          <h3 class="text-3xl font-bold mb-6 text-orange-400">ისტორია</h3>
           <p class="text-lg text-gray-300 mb-6 leading-relaxed">
            ჩემი გატაცება კიბერუსაფრთხოებით დაიწყო მაშინ, როდესაც ბავშვობის ასაკში ვუყურე პირველ "ჰაკერულ" ფილმებს, თუმცა, როდესაც ვნახე რეალური ჰაკინგი სინამდვილეში რა იყო, უფრო დავინტერესდი კომპიუტერულ უსაფრთხოებაში.
           </p>
