--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Projects | Zuka Cyber</title>
+  <title>Projects</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -28,9 +28,9 @@
   <section class="pt-32 pb-20 px-4 bg-cover bg-center" 
            style="background-image: linear-gradient(rgba(10, 10, 10, 0.9), rgba(20, 20, 20, 0.9)), url('https://images.pexels.com/photos/3861972/pexels-photo-3861972.jpeg')">
     <div class="container mx-auto text-center">
-      <h1 class="text-4xl md:text-5xl font-bold mb-6">My Projects</h1>
+      <h1 class="text-4xl md:text-5xl font-bold mb-6">პროექტები</h1>
       <p class="text-xl text-gray-300 max-w-3xl mx-auto">
-        Collection of my cybersecurity work and challenges
+        ჩემი კიბერუსაფრთხოების პროექტების ნაკრები
       </p>
     </div>
   </section>
@@ -45,24 +45,24 @@
                class="w-full h-full object-cover">
         </div>
         <div class="p-6 bg-gray-700">
-          <h2 class="text-2xl font-bold mb-4">CTF Challenge Solutions</h2>
+          <h2 class="text-2xl font-bold mb-4">CTF დავალებები და მათი გაკეთება </h2>
           <div class="mb-4">
-            <span class="inline-block bg-blue-600 text-white text-xs px-2 py-1 rounded mr-2">Cryptography</span>
-            <span class="inline-block bg-green-600 text-white text-xs px-2 py-1 rounded mr-2">Steganography</span>
-            <span class="inline-block bg-purple-600 text-white text-xs px-2 py-1 rounded">Networking</span>
+            <span class="inline-block bg-blue-600 text-white text-xs px-2 py-1 rounded mr-2">კრიპტოგრაფია</span>
+            <span class="inline-block bg-green-600 text-white text-xs px-2 py-1 rounded mr-2">სტეგანოგრაფია</span>
+            <span class="inline-block bg-purple-600 text-white text-xs px-2 py-1 rounded">ქსელები</span>
           </div>
           <p class="text-gray-300 mb-4">
-            Comprehensive collection of my CTF challenge solutions demonstrating skills in:
+            CTF დავალებების პოსტების კოლექცია, სადაც აღწერილია როგორ უნდა დავიწყოთ CTF დავალებების გაკეთება, რაშიც შედის:
           </p>
           <ul class="text-gray-300 mb-4 list-disc list-inside">
-            <li>Cryptographic algorithm analysis</li>
-            <li>Steganography techniques</li>
-            <li>Network traffic analysis</li>
-            <li>Binary exploitation</li>
+            <li>CTF დავალებების მნიშვნელობა</li>
+            <li>დაწყებისთვის აუცილებელი კრიტერიუმები</li>
+            <li>ხელსაწყოები და მათი გამოყენება</li>
+            <li>სხვადასხვა ტიპის CTF კატეგორიები</li>
           </ul>
           <div class="mt-6">
             <a href="ctf.html" class="inline-flex items-center bg-orange-600 hover:bg-orange-700 text-white px-4 py-2 rounded transition">
-              View All Challenges <i class="fas fa-arrow-right ml-2"></i>
+              პოსტები <i class="fas fa-arrow-right ml-2"></i>
             </a>
           </div>
         </div>
@@ -75,13 +75,12 @@
     <div class="container mx-auto">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="index.html" class="text-2xl font-bold text-blue-400">Zuka<span class="text-white">Cyber</span></a>
-          <p class="text-gray-400 mt-2">© 2023 All rights reserved</p>
+          <p class="text-gray-400 mt-2">© 2025 ყველა უფლება დაცულია</p>
         </div>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-github text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
-          <a href="#" class="text-gray-400 hover:text-blue-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-github text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-linkedin text-2xl"></i></a>
+          <a href="#" class="text-gray-400 hover:text-orange-400 transition"><i class="fab fa-twitter text-2xl"></i></a>
         </div>
       </div>
     </div>
