--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
            style="background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('https://images.pexels.com/photos/60504/security-protection-anti-virus-software-60504.jpeg')">
     <div class="container mx-auto">
       <div class="max-w-2xl">
-        <h1 class="text-4xl md:text-6xl font-bold mb-6"><span class="text-blue-400">ზაურ ჭიკაიძე</span></h1>
+        <h1 class="text-4xl md:text-6xl font-bold mb-6"><span class="text-orange-400">ზაურ ჭიკაიძე</span></h1>
         <p class="text-xl md:text-2xl text-gray-300 mb-8">
           კიბერუსაფრთხოების ენთუზიასტი
         </p>
@@ -81,7 +81,6 @@
     <div class="container mx-auto">
       <div class="flex flex-col md:flex-row justify-between items-center">
         <div class="mb-6 md:mb-0">
-          <a href="#" class="text-2xl font-bold text-orange-400">Portfolio</a>
           <p class="text-gray-400 mt-2">© 2025 ყველა უფლება დაცულია</p>
         </div>
         <div class="flex space-x-6">
